--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@artinet/agent-relay",
   "version": "0.0.1",
-  "description": "A library discovering and relaying messages between A2A enabled AI agents.",
+  "description": "A library for discovering and relaying messages between A2A enabled AI agents via the @artinet/sdk.",
   "author": "artinet",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/the-artinet-project/mcp/tree/main/servers/relay"
+    "url": "https://github.com/the-artinet-project/agent-relay"
   },
   "issues": {
-    "url": "https://github.com/the-artinet-project/mcp/issues"
+    "url": "https://github.com/the-artinet-project/agent-relay/issues"
   },
   "files": [
     "dist",
@@ -47,7 +47,6 @@
   "dependencies": {
     "@artinet/sdk": "^0.5.11",
     "@artinet/types": "^0.0.4",
-    "@modelcontextprotocol/sdk": "^1.20.0",
     "p-limit": "^7.2.0",
     "portscanner": "^2.2.0",
     "uuid": "^11.1.0",
