--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artinet/agent-relay",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A library for discovering and relaying messages between A2A enabled AI agents via the @artinet/sdk.",
   "author": "artinet",
   "license": "Apache-2.0",
@@ -46,13 +46,14 @@
   },
   "dependencies": {
     "@artinet/sdk": "^0.5.18",
-    "@artinet/types": "^0.0.7",
+    "@artinet/types": "^0.0.8",
     "p-limit": "^7.2.0",
     "portscanner": "^2.2.0",
     "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@cfworker/json-schema": "^4.1.1",
     "@types/node": "^20.17.50",
     "@types/portscanner": "^2.1.4",
     "eslint": "^9.25.1",
