Update package version to 0.0.9-alpha.1, upgrade dependencies including @artinet/sdk to version 0.6.0-preview.1 and @artinet/types to version 0.0.9-alpha.3. Modify TypeScript configuration to include DOM library and refactor agent management methods for improved type safety. Enhance GitHub Actions workflow for better caching and installation process.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "baseUrl": "."
   },
   "include": ["src/**/*", "bin/**/*"],
