--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artinet/agent-relay",
-  "version": "0.0.8",
+  "version": "0.0.9-alpha.1",
   "description": "A library for discovering and relaying messages between A2A enabled AI agents via the @artinet/sdk.",
   "author": "artinet",
   "license": "Apache-2.0",
@@ -39,12 +39,15 @@
     "prepublishOnly": "npm run clean:all && npm i && npm run build && npm test"
   },
   "dependencies": {
-    "@artinet/sdk": "^0.5.18",
-    "@artinet/types": "^0.0.8",
+    "@artinet/sdk": "^0.6.0-preview.1",
+    "@artinet/types": "^0.0.9-alpha.3",
     "p-limit": "^7.2.0",
     "portscanner": "^2.2.0",
     "uuid": "^11.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.25"
+  },
+  "peerDependencies": {
+    "@modelcontextprotocol/sdk": "^1.24.3"
   },
   "devDependencies": {
     "@cfworker/json-schema": "^4.1.1",
